--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,12 @@ on:
   push:
     branches:
       - main  
-      - dev
+      - develop
 
   pull_request:
     branches:
       - main
-      - dev
+      - develop
 jobs:
   deploy:
     runs-on: ubuntu-latest
