--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install Packages
-      run: npm install
+      run: yarn
     - name: Build page
-      run: npm run build
+      run: yarrn build
     - name : test
-      run : npm test
+      run : yarn test
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
