--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install Packages
       run: yarn
     - name: Build page
-      run: CI= false yarn build
+      run: CI= yarn build
     - name : test
       run : yarn test
     - name: Deploy to gh-pages
