--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.6.0",
     "hammerjs": "^2.0.8",
     "material-ui": "^0.20.2",
+    "msw": "^0.28.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
