--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "material-ui": "^0.20.2",
+    "package": "^1.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
@@ -28,6 +29,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.32.12",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
