--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@progress/kendo-react-charts": "^4.5.0",
     "@progress/kendo-react-intl": "^4.5.0",
     "@progress/kendo-theme-default": "^4.37.0",
+    "@react-mock/state": "^0.1.8",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
