--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-show-more-text": "^1.4.6",
     "react-testing-library": "^8.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
