--- a/package.json
+++ b/package.json
@@ -19,15 +19,13 @@
     "bootstrap": "^4.6.0",
     "hammerjs": "^2.0.8",
     "material-ui": "^0.20.2",
-
-    "package": "^1.0.1",
-
     "msw": "^0.28.2",
     "node-sass": "^5.0.0",
-
+    "package": "^1.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-particles-js": "^3.4.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
