--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.12",
+    "tsparticles": "^1.31.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
