--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: sharpscraper
+  IMAGE_NAME: sharpsfront
 
 jobs:
   # Run tests.
